--- a/src/styles.css
+++ b/src/styles.css
@@ -239,13 +239,13 @@ audio {
   width: 50px;
   height: 50px;
   border-radius: 100%;
-  border: 2px solid rgb(169, 169, 169);
+  border: 2px solid rgb(245, 150, 150);
   background-color: black;
   cursor: pointer;
 }
 
-.login-input,
-.register-input {
+.email-input,
+.password-input {
   margin: 15px;
   padding: 10px;
   border: none;
