--- a/src/styles.css
+++ b/src/styles.css
@@ -250,8 +250,8 @@ audio {
   height: 50px;
   border-radius: 100%;
   border: 2px solid rgb(169, 169, 169);
-  background-color: #ffd700;
-  color: rgb(108, 106, 106);
+  background-color: #f3eab3;
+  color: rgb(76, 75, 75);
   font-size: large;
   font-weight: bold;
   overflow: hidden;
@@ -307,6 +307,7 @@ audio {
 @media (max-width: 1440px) {
   .rank-list {
     display: none;
+    background-color: rgb(0, 0, 0, 0.5);
   }
 }
 
@@ -321,6 +322,10 @@ audio {
 .rank-number {
   font-weight: bold;
   font-size: large;
+}
+
+.is-hidden {
+  display: none;
 }
 
 @keyframes puff-in-center {
