--- a/src/styles.css
+++ b/src/styles.css
@@ -307,7 +307,9 @@ audio {
 @media (max-width: 1440px) {
   .rank-list {
     display: none;
-    background-color: rgb(0, 0, 0, 0.5);
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    color: black;
   }
 }
 
