--- a/src/styles.css
+++ b/src/styles.css
@@ -313,6 +313,13 @@ audio {
   }
 }
 
+@media (max-width: 700px) {
+  .rank-list {
+    right: 0px;
+    padding: 10px;
+  }
+}
+
 .rank-list-record {
   display: flex;
   gap: 40px;
@@ -324,6 +331,12 @@ audio {
 @media (max-width: 1440px) {
   .rank-list-record {
     color: white;
+  }
+}
+
+@media (max-width: 1440px) {
+  .rank-list-record {
+    gap: 20px;
   }
 }
 
